:art: Use environment conversion service when resolving placeholders